--- a/styles/style.css
+++ b/styles/style.css
@@ -129,49 +129,60 @@
 .quienes-somos-img-container {
     width: 100%;
     height: auto;
-    display: flex;
-    justify-content: space-between;
-    overflow-x: auto;
-    padding: 0px;
     box-sizing: border-box;
-    padding-bottom: 10px;
-    padding-right: 4px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    padding: 0px;
 }
 
-.quienes-somos-img1 {
-    width: 34%;
-    border-radius: 10px;
+.img1-container {
+    flex: 1 1 auto;
+    height: fit-content;
+    padding: 0px;
     box-shadow: 2px 4px 4px 2px rgba(3, 3, 3, 0.336);
+    border-radius: 10px;
+    /* border: 1px solid rgba(128, 128, 128, 0.582); */
+    opacity: 0.7;
+    transition: all 0.5s ease-in-out;
+}
+
+.img1-container:hover {
+    opacity: 1;
+    transform: scale(1.1);
+}
+
+.img2-container {
+    flex: 1 1 auto;
+    height: fit-content;
+    box-shadow: 2px 4px 4px 2px rgba(3, 3, 3, 0.336);
+    border-radius: 10px;
     border: 1px solid rgba(128, 128, 128, 0.582);
     opacity: 0.7;
 }
 
-.quienes-somos-img1:hover {
+.img2-container:hover {
     opacity: 1;
 }
 
-.quienes-somos-img2 {
-    width: 30%;
-    border-radius: 10px;
+.img3-container {
+    flex: 1 1 auto;
+    height: fit-content;
     box-shadow: 2px 4px 4px 2px rgba(3, 3, 3, 0.336);
+    border-radius: 10px;
     border: 1px solid rgba(128, 128, 128, 0.582);
     opacity: 0.7;
 }
 
-.quienes-somos-img2:hover {
+.img3-container:hover {
     opacity: 1;
 }
 
-.quienes-somos-img3 {
-    width: 30%;
+.quienes-somos-img {
+    width: 100%;
+    height: auto;
     border-radius: 10px;
-    box-shadow: 2px 4px 4px 2px rgba(3, 3, 3, 0.336);
-    border: 1px solid rgba(128, 128, 128, 0.582);
-    opacity: 0.7;
-}
-
-.quienes-somos-img3:hover {
-    opacity: 1;
+    margin: 0;
 }
 
 /* QUE HACEMOS */
