--- a/styles/style.css
+++ b/styles/style.css
@@ -139,8 +139,7 @@
 .img1-container {
     flex: 1 1 auto;
     height: fit-content;
-    padding: 0px;
-    box-shadow: 2px 4px 4px 2px rgba(3, 3, 3, 0.336);
+    padding: 1%;
     border-radius: 10px;
     /* border: 1px solid rgba(128, 128, 128, 0.582); */
     opacity: 0.7;
@@ -155,32 +154,36 @@
 .img2-container {
     flex: 1 1 auto;
     height: fit-content;
-    box-shadow: 2px 4px 4px 2px rgba(3, 3, 3, 0.336);
+    padding: 1%;
     border-radius: 10px;
-    border: 1px solid rgba(128, 128, 128, 0.582);
     opacity: 0.7;
+    transition: all 0.5s ease-in-out;
+
 }
 
 .img2-container:hover {
     opacity: 1;
+    transform: scale(1.1);
 }
 
 .img3-container {
     flex: 1 1 auto;
     height: fit-content;
-    box-shadow: 2px 4px 4px 2px rgba(3, 3, 3, 0.336);
+    padding: 1%;
     border-radius: 10px;
-    border: 1px solid rgba(128, 128, 128, 0.582);
     opacity: 0.7;
+    transition: all 0.5s ease-in-out;
 }
 
 .img3-container:hover {
     opacity: 1;
+    transform: scale(1.1);
 }
 
 .quienes-somos-img {
     width: 100%;
     height: auto;
+    box-shadow: 2px 4px 4px 2px rgba(3, 3, 3, 0.336);
     border-radius: 10px;
     margin: 0;
 }
@@ -333,12 +336,14 @@ input[type=number]::-webkit-inner-spin-button {
 }
 
 .contacto-container {
+    width: 100%;
     display: flex;
     flex-flow: row nowrap;
 }
 
 .contacto-info {
     flex: 1 1 auto;
+    width: 100%;
     
 }
 
@@ -347,7 +352,44 @@ input[type=number]::-webkit-inner-spin-button {
 }
 
 .contacto-title {
-    margin: 0px;
+    margin-top: 0%;
+    margin-bottom: 3%;
+}
+
+.mail-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+}
+
+.mail {
+    margin: 0%;
+    margin-left: 2%;
+}
+
+.numero-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center; 
+}
+
+.numero {
+    margin-left: 2%;
+}
+
+.fa-instagram {
+    font-size: 2rem;
+} 
+
+.fa-facebook-square {
+    font-size: 2rem;
+}
+
+
+.ubicacion-title {
+    margin-top: 0%;
 }
 
 /* RESPONSIVE */
