--- a/styles/style.css
+++ b/styles/style.css
@@ -86,18 +86,18 @@
 
 /* BANNER */
 .banner-container {
-  height:485px;
+  height:488px;
   width: 100%;
   position: relative;
   background-color: var(--color-terciary);
 }
 
 .background-image {
-  height: 485px;
-  width: 1059px;
+  height: 100%;
+  width: 100%;
   background-image: url("../imagenes/fondobanner.png");
   position: absolute;
-  background-size: cover
+  background-size: cover;
 }
 
 .banner-title {
@@ -344,6 +344,7 @@ input[type=number]::-webkit-inner-spin-button {
 .contacto-info {
     flex: 1 1 auto;
     width: 100%;
+    margin-right: 8%;
     
 }
 
@@ -354,6 +355,14 @@ input[type=number]::-webkit-inner-spin-button {
 .contacto-title {
     margin-top: 0%;
     margin-bottom: 3%;
+    border: none;
+    border-bottom: solid 2px var(--color-secondary);
+}
+
+h3 {
+ margin-top: 5.5%;
+ border: none;
+ border-bottom: solid 1px var(--color-secondary);
 }
 
 .mail-container {
@@ -377,16 +386,54 @@ input[type=number]::-webkit-inner-spin-button {
 
 .numero {
     margin-left: 2%;
+    margin-bottom: 0;
+}
+
+.horario-semana {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  border: none;
+  border-bottom: solid 1px rgba(128, 128, 128, 0.247);
+}
+
+.horario-semana p {
+  margin: 0;
+}
+
+.horario-finde {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  border: none;
+  border-bottom: solid 1px rgba(128, 128, 128, 0.247);
+  margin-top: 3%;
+}
+
+.horario-finde p {
+  margin: 0;
 }
 
 .fa-instagram {
     font-size: 2rem;
+    margin-right: 1.5%;
 } 
+
+.fa-instagram:hover {
+  transform: scale(1.2);
+  color: var(--color-secondary);
+}
 
 .fa-facebook-square {
     font-size: 2rem;
 }
 
+.fa-facebook-square:hover {
+  transform: scale(1.2);
+  color: var(--color-secondary);
+}
 
 .ubicacion-title {
     margin-top: 0%;
