--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -559,6 +559,7 @@ h3 {
   box-sizing: border-box;
   height: fit-content;
   margin-bottom: 3%;
+  line-height: 1.5rem;
 }
 
 .lab-content1-parr {
@@ -575,6 +576,39 @@ h3 {
 .imagen-laboratorio1 {
   width: 48%;
   height: auto;
+}
+
+.lab-content2 {
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: auto;
+  box-sizing: border-box;
+  height: fit-content;
+  margin-bottom: 3%;
+  background-color: var(--color-secondary);
+  padding: 1%;
+  line-height: 1.5rem;
+}
+
+.imagen-laboratorio2-container{
+  /* flex: 1 3 auto; */
+  width: 50%;
+  margin-right: 1;
+}
+
+.imagen-laboratorio2 {
+  width: 100%;
+  height: auto;
+} 
+
+.lab-content2 p{
+  /* flex: 2 3 auto; */
+  width: 40%;
+  margin-top: 0%;
+  margin-right: 4.5%;
 }
 
 /* TIENDA */
