--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -466,6 +466,7 @@ h3 {
 
 .modal-header{
   background-color: var(--color-primary);
+  margin-bottom: 2%;
 }
 
 .input-modal{
@@ -482,6 +483,11 @@ h3 {
 .modal-footer{
   background-color: var(--color-primary);
   box-sizing: border-box; 
+  border-radius: 0 0 4px 4px;
+}
+
+.agregar-produc-form{
+  border-radius: 40px;
 }
 
 .btn-secondary{
@@ -503,6 +509,23 @@ h3 {
   /* border: solid 1px var(--color-secondary); */
   color: rgb(80, 80, 80);
   transform: scale(1.05);
+}
+
+.modal-body{
+  padding: 0;
+  border-radius: 20px;
+}
+
+.agregar-produc-form label{
+  margin-left: 3%;
+}
+
+.agregar-produc-form input{
+  margin-left: 3%;
+}
+
+.input-modal{
+  margin-bottom: 3%;
 }
 
 /* LABORATORIO */
@@ -620,18 +643,14 @@ h3 {
   color: rgb(95, 94, 94);
   text-align: center;
   font-size: 3rem;
+  margin-bottom: 1%;
 }
 
 .tienda-menu{
-  list-style: none;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  padding: 1% 0% 1% 0%;
+  width: 100%;
+  border: 5px solid var(--color-secondary);
   background-color: var(--color-secondary);
-  font-family: 'Roboto Mono', monospace;
-  font-size: 1.2rem;
-  color: rgb(95, 94, 94);
+  margin-bottom: 2%;
 }
 
 #tienda-productos{
@@ -644,8 +663,17 @@ h3 {
   /* align-items: */
 }
 
+.productos-cards-container{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  box-sizing: border-box;
+  justify-content: center;
+}
+
 .productos{
-  width: 22%;
+  width: 250px;
   height: auto;
   box-shadow: 2px 4px 4px 2px rgba(3, 3, 3, 0.336);
   font-family: 'Roboto Mono', monospace;
@@ -670,9 +698,39 @@ h3 {
 }
 
 .boton-productos{
+  width: 100%;
   border: none;
-  padding: 2%;
+  padding: 4%;
   border-radius: 6px;
+  margin-bottom: 5px;
+}
+
+.boton-productos:hover{
+  cursor: pointer;
+}
+
+.btn-danger{
+  width: 100%;
+  margin-bottom: 5px;
+  border-radius: 6px;
+  background-color: gray;
+  border: gray;
+  color: var(--color-secondary);
+}
+
+.productos a{
+  color: white;
+}
+
+.btn-warning{
+  width: 100%;
+  border-radius: 6px;
+  background-color: #9caca2;
+  border: #9caca2 ;
+}
+
+.btn-warning:hover{
+  background-color: var(--color-terciary);
 }
 
 .img-productos{
@@ -753,6 +811,84 @@ table{
 .datos-compra-tabla{
   margin-left: 10%;
   margin-top: 1%;
+}
+
+/* PERFIL */
+
+.row{
+  margin-top: 3%;
+}
+
+.p-4{
+  padding-top: 10%;
+  /* height: 100vh;
+  box-sizing: border-box; */
+}
+
+.text-center{
+  border: solid 5px var(--color-primary);
+  border-radius: 7px;
+  box-shadow: 2px 4px 8px 4px rgba(3, 3, 3, 0.274);
+  color: rgb(83, 83, 83) ;
+}
+
+.text-center h3{
+  margin: 0;
+  padding: 4% 2% 5% 2%;
+  border: none;
+  background-color: var(--color-primary);
+}
+
+.card-body{
+  border: solid 2px var(--color-secondary) ;
+  
+}
+
+.card-body input{
+  margin-bottom: 5%;
+  color: rgb(83, 83, 83) ;
+}
+
+.card-body button{
+  margin-top: 3%;
+  padding: 1.5% 4%;
+  border-radius: 4px;
+  font-size: 1.3rem;
+  background-color: var(--color-secondary);
+  border: solid 2px var(--color-secondary);
+  color: rgb(83, 83, 83) ;
+  box-shadow: 2px 4px 6px 2px rgba(56, 56, 56, 0.226);
+}
+
+/* AGREGAR PRODUCTOS */
+
+.agrprod-fullcontainer{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 10%;
+}
+
+.agrprod-card{
+  width: 300px;
+  border: solid 7px var(--color-primary);
+  text-align: center;
+  border-radius: 6px;
+  margin: 1px;
+}
+
+.agrprod-card h3{
+  background-color: var(--color-primary);
+  margin: 0% ;
+  padding: 3%;
+  border: 1px solid var(--color-primary);
+}
+
+.agrprod-form{
+  padding-top: 6%;
+  padding-bottom: 6%;
+  border-radius: solid 3px var(--color-secondary);
+  background-color: #d8ece0;
 }
 
 /* RESPONSIVE */
