--- a/views/tienda/agregarproducto.hbs
+++ b/views/tienda/agregarproducto.hbs
@@ -1,7 +1,12 @@
-<form action="/tienda/agregarproducto" method="POST">
-    <input type="text" name="nombre" id="nombre" placeholder="nombre"><br>
-    <input type="text" name="precio" id="precio" placeholder="precio"><br>
-    <input type="text" name="categoria" id="categoria" placeholder="categoria"><br>
-    <input type="text" name="stock" id="stock" placeholder="stock"><br>
-    <button id="btn-subir-producto">Subir</button>
-</form>
+<div class="agrprod-fullcontainer">
+<div class="agrprod-card">
+    <h3>Agregar producto</h3>
+    <form class="agrprod-form" action="/tienda/agregarproducto" method="POST">
+        <input type="text" name="nombre" id="nombre" placeholder="nombre"><br>
+        <input type="text" name="precio" id="precio" placeholder="precio"><br>
+        <input type="text" name="categoria" id="categoria" placeholder="categoria"><br>
+        <input type="text" name="stock" id="stock" placeholder="stock"><br>
+        <button id="btn-subir-producto">Subir</button>
+    </form>
+</div>
+</div>
