--- a/views/tienda/tienda.hbs
+++ b/views/tienda/tienda.hbs
@@ -7,13 +7,18 @@
 <div id="tienda-productos">
 
 {{!-- tienda para admin --}}
-{{#if user}}
+{{#if user.admin}}
     {{#each tienda}}
         <div class="productos">
             <img class="img-productos" src="/imagenes/imagen-1.jpg" alt="">
-            <h3 class="nombre-productos">{{nombre}}</h3>
-            <h3 class="precio-productos">${{precio}}</h3>
-            <button class="boton-productos">Agregar al carrito</button>
+            <form action="tienda/agregarcarrito" method="POST">
+                <h3 class="nombre-productos">{{nombre}}</h3>
+                <h3 class="precio-productos">${{precio}}</h3>
+                <input type="text" name="nombre" id="nombre" value="{{nombre}}" style="display: none;">
+                <input type="text" name="precio" id="precio" value="{{precio}}" style="display: none;">
+                <input type="text" name="cantidad" id="cantidad" value="{{cantidad}}" style="display: none;">
+                <input type="text" name="id" id="id" value="{{id}}" style="display: none;">
+            </form>
             <a href="/tienda/eliminar/{{id}}" class="btn btn-danger">Eliminar producto</a>
             <a href="/tienda/editar/{{id}}" class="btn btn-warning">Editar producto</a>
         </div>
