--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -891,6 +891,22 @@ table{
   background-color: #d8ece0;
 }
 
+.agrprod-form input{
+  margin-bottom: 6%;
+  border-radius: 4px;
+  border: solid 1px gray;
+  padding: 1%;
+}
+
+.agrprod-form button{
+  background-color: var(--color-secondary);
+  padding: 1.5% 3.5% 1.5% 3.5%;
+  font-size: 1.1rem;
+  border: none;
+  box-shadow: 2px 4px 6px 2px rgba(99, 98, 98, 0.192);
+  border-radius: 3px;
+}
+
 /* RESPONSIVE */
 @media (max-width: 1216px){
   .banner-title{
