css edit productos

--- a/views/auth/iniciosesion.hbs
+++ b/views/auth/iniciosesion.hbs
@@ -1,13 +1,17 @@
-<div class="modal-body">
-    <form class="agregar-produc-form" action="/iniciosesion" method="POST">
-        <label for="mail">Mail:</label><br>
-        <input class="input-modal" type="text" id="mail" name="mail"><br>
-        <label for="contrasena">Contraseña:</label><br>
-        <input class="input-modal" type="password" id="constrasena" name="contrasena"><br>
-        <span id="error-modal"></span>
-        <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-            <button type="sumbit" class="btn btn-success">Aceptar</button>
-        </div>
-    </form>
+<h2 class="title-insesion">Para continuar, por favor inicia sesión</h2>
+<div class="agrprod-fullcontainer">
+    <div class="card-insesion">
+        <h3>Inicio de sesión</h3>
+        <form class="agregar-produc-form" action="/iniciosesion" method="POST">
+            <label for="mail">Mail:</label><br>
+            <input class="input-modal" type="text" id="mail" name="mail"><br>
+            <label for="contrasena">Contraseña:</label><br>
+            <input class="input-modal" type="password" id="constrasena" name="contrasena"><br>
+            <span id="error-modal"></span>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                <button type="sumbit" class="btn btn-success">Aceptar</button>
+            </div>
+        </form>
+    </div>
 </div>
