--- a/views/tienda/agregarproducto.hbs
+++ b/views/tienda/agregarproducto.hbs
@@ -1,12 +1,14 @@
+<h1 class="tienda-title">PRODUCTOS <i class="fas fa-store"></i></h1>
+<div class="tienda-menu"></div>
 <div class="agrprod-fullcontainer">
-<div class="agrprod-card">
-    <h3>Agregar producto</h3>
-    <form class="agrprod-form" action="/tienda/agregarproducto" method="POST">
-        <input type="text" name="nombre" id="nombre" placeholder="nombre"><br>
-        <input type="text" name="precio" id="precio" placeholder="precio"><br>
-        <input type="text" name="categoria" id="categoria" placeholder="categoria"><br>
-        <input type="text" name="stock" id="stock" placeholder="stock"><br>
-        <button id="btn-subir-producto">Subir</button>
-    </form>
-</div>
+    <div class="agrprod-card">
+        <h3>Agregar producto</h3>
+        <form class="agrprod-form" action="/tienda/agregarproducto" method="POST">
+            <input type="text" name="nombre" id="nombre" placeholder="nombre"><br>
+            <input type="text" name="precio" id="precio" placeholder="precio"><br>
+            <input type="text" name="categoria" id="categoria" placeholder="categoria"><br>
+            <input type="text" name="stock" id="stock" placeholder="stock"><br>
+            <button id="btn-subir-producto">Subir</button>
+        </form>
+    </div>
 </div>
