--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -875,6 +875,7 @@ table{
   text-align: center;
   border-radius: 6px;
   margin: 1px;
+  box-shadow: 2px 4px 8px 6px rgba(56, 56, 56, 0.226);
 }
 
 .agrprod-card h3{
@@ -882,6 +883,7 @@ table{
   margin: 0% ;
   padding: 3%;
   border: 1px solid var(--color-primary);
+  color: rgb(83, 83, 83) ;
 }
 
 .agrprod-form{
@@ -889,6 +891,45 @@ table{
   padding-bottom: 6%;
   border-radius: solid 3px var(--color-secondary);
   background-color: #d8ece0;
+}
+
+.agrprod-form input{
+  margin-bottom: 6%;
+  border-radius: 4px;
+  border: solid 1px gray;
+  padding: 1%;
+}
+
+.agrprod-form button{
+  background-color: var(--color-secondary);
+  padding: 2% 4% 2% 4%;
+  font-size: 1.1rem;
+  border: none;
+  box-shadow: 2px 4px 6px 2px rgba(99, 98, 98, 0.192);
+  border-radius: 3px;
+  color: rgb(83, 83, 83) ;
+}
+
+/* INICIO DE SESION */
+
+.title-insesion{
+  color: rgb(83, 83, 83) ;
+  font-family: 'Roboto Mono', monospace;
+  margin-top: 1%;
+  margin-left: 1%;
+}
+
+.card-insesion{
+  width: 300px;
+  box-shadow: 2px 4px 6px 2px rgba(99, 98, 98, 0.192);
+  color: rgb(83, 83, 83) ;
+}
+
+.card-insesion h3{
+  border-radius: 4px 4px 0 0;
+  padding: 4%;
+  background-color: var(--color-primary);
+  margin-top: 0;
 }
 
 /* RESPONSIVE */
