--- a/views/tienda/editarproducto.hbs
+++ b/views/tienda/editarproducto.hbs
@@ -1,7 +1,14 @@
-<form action="/tienda/editarproducto/{{tienda.id}}" method="POST">
-    <input type="text" name="nombre" id="nombre" value="{{tienda.nombre}}"><br>
-    <input type="text" name="precio" id="precio" value="{{tienda.precio}}"><br>
-    <input type="text" name="categoria" id="categoria" value="{{tienda.categoria}}"><br>
-    <input type="text" name="stock" id="stock" value="{{tienda.stock}}"><br>
-    <button id="btn-subir-producto">Subir</button>
-</form>
+<h1 class="tienda-title">PRODUCTOS <i class="fas fa-store"></i></h1>
+<div class="tienda-menu"></div>
+<div class="agrprod-fullcontainer">
+    <div class="agrprod-card">
+        <h3>Editar producto</h3>
+        <form class="agrprod-form" action="/tienda/editarproducto/{{tienda.id}}" method="POST">
+            <input type="text" name="nombre" id="nombre" value="{{tienda.nombre}}"><br>
+            <input type="text" name="precio" id="precio" value="{{tienda.precio}}"><br>
+            <input type="text" name="categoria" id="categoria" value="{{tienda.categoria}}"><br>
+            <input type="text" name="stock" id="stock" value="{{tienda.stock}}"><br>
+            <button id="btn-subir-producto">Subir</button>
+        </form>
+    </div>    
+</div>
