--- a/views/partials/navigation.hbs
+++ b/views/partials/navigation.hbs
@@ -16,6 +16,7 @@
         {{!-- funciones que aparecen solo al admin --}}
         {{#if user.admin}}
             <li class="li-2"><a href="/tienda/agregarproducto">Agregar Producto</a></li>
+            <li class="li-2"><a href="/tienda/ventas">Pedidos</a></li>
         {{/if}}
 
         {{!-- estas funciones solo aparecen cuando no hay un usuario logueado --}}
