--- a/views/tienda/carrito.hbs
+++ b/views/tienda/carrito.hbs
@@ -47,7 +47,7 @@
                 <tbody>
                     <tr>
                         <td>Total de la orden</td>
-                        <td id="total-orden"></td>
+                        <td id="total-orden">${{total}}</td>
                     </tr>
                 </tbody>
             </table>
