--- a/views/tienda/ventas.hbs
+++ b/views/tienda/ventas.hbs
@@ -1,4 +1,4 @@
-<h1 class="tienda-title">CARRITO <i class="fas fa-shopping-cart"></i></h1>
+<h1 class="tienda-title">VENTAS <i class="fas fa-store"></i></h1>
     <div class="carrito-subtitulo">
         <h2>TUS PRODUCTOS</h2>
     </div>
@@ -24,7 +24,7 @@
                     <td>
                         <span class="carrito-precio">{{cantidad}}</span>
                     </td>
-                    <td>
+                    <td class="ventas-btncont">
                         <span class="carrito-precio">${{precio}}</span>
                         <a href="/tienda/entregarventa/{{id}}" class="btn btn-danger">Entregar venta</a>
                     </td>
