--- a/views/partials/navigation.hbs
+++ b/views/partials/navigation.hbs
@@ -48,8 +48,8 @@
                     <label for="contrasena">Contraseña:</label><br>
                     <input class="input-modal" type="password" id="constrasena" name="contrasena" required><br>
 
-                    <label for="confirm-contrasena">Confirmar contraseña:</label><br>
-                    <input class="input-modal" type="password" id="confirm-constrasena" name="confirm-contrasena" required><br>
+                    <label for="confirmarContrasena">Confirmar contraseña:</label><br>
+                    <input class="input-modal" type="password" id="confirm-constrasena" name="confirmarContrasena" required><br>
                 
                     <label for="telefono">Telefono de contacto:</label><br>
                     <input class="input-modal" type="number" id="telefono" name="telefono" required><br>
