--- a/views/partials/navigationmobile.hbs
+++ b/views/partials/navigationmobile.hbs
@@ -43,5 +43,5 @@
                 <img class="img-logo" src="imagenes/Logo Etiquetas 3.png" alt="logo">
             </div>
         </label>
-    </nav>npx no
+    </nav>
 </section>
